﻿drkns 09.05.2016 15:17:11 +0200 - build 4667

1. clang warnings.

2. Пара мелочей.

zg 09.05.2016 14:00:08 +0200 - build 4666

1. уточнение 4638.1: Dlg.* в раскрытом комбобоксе.

zg 08.05.2016 13:27:59 +0200 - build 4665

1. уточнение 4638.1: макрообласть для комбобокса - "Dialog".

2. опубликован тип окна WTYPE_COMBOBOX. ACTL_GETWINDOWINFO в Id возвращает хэндл родительского диалога.

drkns 08.05.2016 01:12:06 +0200 - build 4664

1. Уточнение 4663.2.

2. Повысим уровень предупреждений для thirdparty-библиотек.

drkns 07.05.2016 17:45:49 +0200 - build 4663

1. Уточнение расчета общего индикатора удаления.

2. Рефакторинг.

drkns 04.05.2016 23:22:57 +0200 - build 4662

1. После 4435 не работало разворачивание переменных в диалоге создания папки.

2. Рефакторинг.

drkns 04.05.2016 10:20:21 +0200 - build 4661

1. Уточнение 4656.2.

2. Пара мелочей.

drkns 03.05.2016 16:58:07 +0200 - build 4660

1. Уточнение 4656.2.

drkns 03.05.2016 13:51:34 +0200 - build 4659

1. 0003229: Removing mounted VHDX files from the drive menu makes file locked

drkns 03.05.2016 11:28:32 +0200 - build 4658

1. 0003228: Shell команда CD не находит путь есть в конце выполняемой стоки стоит пробел

drkns 02.05.2016 19:51:44 +0200 - build 4657

1. C форума: Выполняем в комстроке FAR: notepad %FARHOME%\changelog. Получаем ошибку "The system cannot find the path specified."

2. Рефакторинг.

drkns 02.05.2016 12:23:29 +0200 - build 4656

1. 0003227: Не работает открытие папки в проводнике через Shift+Enter

2. FCTL_GETUSERSCREEN / FCTL_SETUSERSCREEN должны работать более адекватно.

3. Рефакторинг.

drkns 30.04.2016 20:54:00 +0200 - build 4655

1. 0003225: Зависание при нажатии на "крестик" консоли из модального редактора

drkns 30.04.2016 15:16:06 +0200 - build 4654

1. Продолжим чинить запускатель.

drkns 29.04.2016 19:13:57 +0200 - build 4653

1. С форума: в текущей ночной при попытке запустить команду far из комстроки far он сам себя не находит.

drkns 29.04.2016 17:31:01 +0200 - build 4652
