@@ -1,4 +1,8 @@
-﻿drkns 09.05.2016 15:17:11 +0200 - build 4667
+﻿drkns 10.05.2016 18:04:22 +0200 - build 4668
+
+1. С форума: после нажатия Enter на офисных документах в панелях Far терпеливо ждёт когда документ будет закрыт.
+
+drkns 09.05.2016 15:17:11 +0200 - build 4667
 
 1. clang warnings.
 
